# WebComPy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  LICENSE.txt  PATH-AUDIT.md  README.ja.md  README.md  opencode.json  pylintrc  pyproject.toml  requirements.txt  setup.py  webcompy_config.py
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  3_bug_report_ja.yml  4_feature_request_ja.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: default.md  openspec-proposal.md
.github/workflows/: ci.yml  deploy-pages.yml  opencode-review-comment.yml  opencode-review.yml
.opencode/agents/: browser-developer.md  browser-inspector.md  ci-local.md  ci-review.md  component-developer.md  docs-developer.md  review.md  runtime-analyzer.md  server-developer.md
docs/: 404.html  app.py  index.html
docs/_scripts/: docs_src.brython.js  webcompy.brython.js
docs/_webcompy-app-package/: app-22.134.39083-py3-none-any.whl  app-22.134.77497-py3-none-any.whl  app-22.134.78147-py3-none-any.whl  app-22.134.993-py3-none-any.whl  app-22.146.41165-py3-none-any.whl  app-22.148.52503-py3-none-any.whl  app-22.157.55511-py3-none-any.whl  app-22.157.57090-py3-none-any.whl  app-22.282.41561-py3-none-any.whl  webcompy-0.0.10-py3-none-any.whl  webcompy-0.0.11-py3-none-any.whl  webcompy-0.0.12-py3-none-any.whl  webcompy-0.0.13-py3-none-any.whl  webcompy-0.0.14-py3-none-any.whl  webcompy-0.0.8-py3-none-any.whl  webcompy-0.0.9-py3-none-any.whl
docs/documents/: index.html
docs/scripts/: docs_src.brython.js  webcompy.brython.js
docs/webcompy-app-package/: app-0.0.0-py3-none-any.whl  app-22.132.4006-py3-none-any.whl  app-22.132.9435-py3-none-any.whl  app-22.133.11714-py3-none-any.whl  app-22.133.43932-py3-none-any.whl  webcompy-0.0.0-py3-none-any.whl  webcompy-0.0.6-py3-none-any.whl  webcompy-0.0.7-py3-none-any.whl  webcompy-0.0.8-py3-none-any.whl
docs_app/: app.py  bootstrap.py  plugins.py  pyproject.toml  router.py  webcompy_config.py  webcompy_server_config.py
docs_app/components/: demo_display.py  navigation.py  syntax_highlighting.py  theme_toggle.py  ui.py
docs_app/pages/: home.py  not_found.py
docs_app/templates/: home.py
docs_src/: bootstrap.py  layout.py  pyproject.toml  router.py  webcompy-lock.json  webcompy_config.py  webcompy_server_config.py
docs_src/components/: demo_display.py  navigation.py  syntax_highlighting.py
docs_src/pages/: home.py  not_found.py
docs_src/templates/: home.py
openspec/: config.yaml
scripts/: run-e2e-tests.sh
static/fetch_sample/: sample.json
tests/: conftest.py  test_ajax.py  test_app_di_scope_server_error.py  test_app_instance.py  test_assets.py  test_async_result.py  test_base_elements.py  test_build_runtime_local.py  test_build_standalone.py  test_build_wheels.py  test_code_block_component.py  test_code_block_highlight.py  test_code_block_lexers.py  test_components.py  test_config.py  test_config_dataclasses.py  test_config_discovery.py  test_dependency_resolver.py  test_di.py  test_dict_mutation.py  test_docs_demos.py  test_effect.py  test_elements.py  test_elements_browser.py  test_ensure_modules_dir.py  test_exception.py  test_framework_css_access.py  test_framework_css_bundling.py  test_framework_ui_html.py  test_full_hydration.py  test_graph.py  test_hooks.py  test_html_generation.py  test_keyed_repeat.py  test_lazy_routing.py  test_list_mutation.py  test_location.py  test_lockfile.py  test_lockfile_sync.py  test_nested_dynamic.py  (+43 more)
tests/e2e/: conftest.py  test_async_nav.py  test_bootstrap.py  test_bundled_deps.py  test_bundled_deps_browser.py  test_component.py  test_di.py  test_dict_repeat.py  test_eruda.py  test_event.py  test_keyed_repeat.py  test_lifecycle.py  test_nested_dynamic.py  test_reactive.py  test_repeat.py  test_router.py  test_runtime_local.py  test_scoped_style.py  test_standalone.py  test_static_site.py  test_switch.py  webcompy_config.py  webcompy_server_config.py
tests/e2e_docs/: conftest.py  test_documents.py  test_fetch.py  test_fizzbuzz.py  test_helloworld.py  test_home.py  test_matplotlib.py  test_todo.py
typings/browser/: __init__.pyi
typings/javascript/: __init__.pyi
webcompy/: __init__.py  __main__.py  assets.py  logging.py
webcompy/_browser/: __init__.py  _modules.py  _modules.pyi
webcompy/aio/: __init__.py  _aio.py  _async_result.py  _utils.py
webcompy/ajax/: _fetch.py
webcompy/app/: __init__.py  _app.py  _config.py  _render_context.py  _root_component.py  styles.py
webcompy/brython/: __init__.py  _modules.py  _modules.pyi
webcompy/cli/: __init__.py  _argparser.py  _asgi_app.py  _brython_cli.py  _config.py  _dependency_resolver.py  _exception.py  _generate.py  _html.py  _init_project.py  _inspect.py  _lock.py  _lockfile.py  _lockfile_sync.py  _pyodide_downloader.py  _pyodide_lock.py  _pyscript_wheel.py  _runtime_downloader.py  _server.py  _static_files.py  _utils.py  _wheel_builder.py
webcompy/components/: __init__.py  _abstract.py  _component.py  _decorators.py  _generator.py  _hooks.py  _libs.py  _reactive_scoped_style.py
webcompy/di/: __init__.py  _exceptions.py  _key.py  _keys.py  _provide_inject.py  _scope.py
webcompy/elements/: __init__.py  _dom_objs.py  _head.py  generators.py
webcompy/plugin/: __init__.py  __init__.pyi  _manager.py  _plugin.py
webcompy/ports/: __init__.py  _cookie.py  _dom.py  _fetch.py  _ffi.py  _history.py  _host.py  _keys.py  _media_query.py
webcompy/reactive/: __init__.py  _base.py  _composable.py  _computed.py  _container.py  _dict.py  _effect.py  _graph.py  _list.py  _readonly.py
webcompy/router/: __init__.py  _change_event_hander.py  _change_event_handler.py  _component.py  _context.py  _history_events.py  _lazy.py  _link.py  _pages.py  _router.py  _use_router.py  _view.py
webcompy/signal/: __init__.py  _base.py  _composable.py  _computed.py  _effect.py  _graph.py  _readonly.py
webcompy/testing/: __init__.py  _asgi.py  _dom.py  _ports.py  _renderer.py  _scope.py  _utils.py
webcompy/ui/: README.md
webcompy/utils/: __init__.py  _environment.py  _serialize.py  _text.py
(+844 files in other folders)
