[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webcompy"
version = "0.0.13"
description = "Python frontend framework which works on Browser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Kento Niwase", email = "kento.niwase@gmail.com" },
]
keywords = ["browser", "frontend", "framework", "front-end", "client-side"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing_extensions",
    "starlette",
    "sse-starlette",
    "uvicorn",
    "aiofiles",
]

[project.urls]
Homepage = "https://github.com/kniwase/WebComPy"

[tool.hatch.build.targets.wheel]
packages = ["webcompy"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
exclude = ["docs_src", "docs", "template"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["webcompy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
exclude = [
    "docs/**",
    "docs_src/**",
    "webcompy/cli/template_data/**",
]
stubPath = "webcompy/_browser"

[dependency-groups]
dev = [
    "nodeenv>=1.10.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.15.10",
    "wheel",
]
