[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webcompy"
version = "0.0.13"
description = "Python frontend framework which works on Browser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Kento Niwase", email = "kento.niwase@gmail.com" },
]
keywords = ["browser", "frontend", "framework", "front-end", "client-side"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing_extensions",
    "starlette",
    "sse-starlette",
    "uvicorn",
    "aiofiles",
]

[project.urls]
Homepage = "https://github.com/kniwase/WebComPy"

[tool.hatch.build.targets.wheel]
packages = ["webcompy"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
exclude = ["docs_src", "docs", "template"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP046",  # Generic class with multiple TypeVars - PEP 695 migration is too invasive
    "UP040",  # Non-PEP695 type alias - breaks TypeAlias subclassing
    "UP047",  # Non-PEP695 generic function - migration is too invasive
    "E731",   # lambda assignment - intentional in many places
    "TC001",  # typing-only first-party import - too many false positives with __future__ annotations
    "TC003",  # typing-only standard-library import - too many false positives with __future__ annotations
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.isort]
known-first-party = ["webcompy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportMissingImports = "none"
reportInvalidTypeForm = "warning"
reportAttributeAccessIssue = "warning"
exclude = [
    "docs/**",
    "docs_src/**",
    "tests/**",
    "webcompy/cli/template_data/**",
    "**/node_modules/**",
    ".venv/**",
]
include = [
    "webcompy",
    "docs_src",
    "tests",
]
stubPath = "webcompy/_browser"

[dependency-groups]
dev = [
    # Pinned to match Pyodide 0.28.0 versions (required by dev server for docs_src)
    "matplotlib==3.8.4",
    "nodeenv>=1.10.0",
    # Pinned to match Pyodide 0.28.0 versions (required by dev server for docs_src)
    "numpy==2.2.5",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "setuptools>=82.0.1",
    "wheel",
]
