[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
webcompy = { workspace = true }
webcompy-server = { workspace = true }
webcompy-cli = { workspace = true }
webcompy-testing = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]
ignore = [
    "E501",
    "UP046",
    "UP040",
    "UP047",
    "E731",
    "TC001",
    "TC003",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.isort]
known-first-party = ["webcompy", "webcompy_server", "webcompy_cli", "webcompy_testing"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportMissingImports = "none"
reportInvalidTypeForm = "warning"
reportAttributeAccessIssue = "warning"
exclude = [
    "docs/**",
    "docs_app/**",
    "tests/**",
    "**/node_modules/**",
    ".venv/**",
]
include = [
    "packages/webcompy/src/webcompy",
    "packages/webcompy-server/src/webcompy_server",
    "packages/webcompy-cli/src/webcompy_cli",
    "packages/webcompy-testing/src/webcompy_testing",
    "docs_app",
    "tests",
]
stubPath = "packages/webcompy/src/webcompy/ports"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.1",
    "nest-asyncio>=1.6.0",
    "nodeenv>=1.10.0",
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.10",
]
docs = [
    "matplotlib>=3.9.0,<4",
    "numpy==2.2.5",
]
